--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,9 @@ libunftp = "0.18.6"
 unftp-sbe-fs = "0.2"
 tokio = { version = "1", features = ["full"] }
 jni = "0.19"
+android_logger = "0.11.1"
+log = "0.4.17"
+libc = "0.2.84"
+
+[target.'cfg(target_os = "android")'.dependencies]
+ndk-sys = "0.4.0"
