--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 [dependencies]
 libunftp = "0.18.6"
 unftp-sbe-fs = "0.2"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
 jni = "0.19"
 android_logger = "0.11.1"
 log = "0.4.17"
